# boyd-convex-optimisation-py

./: README.md  pyproject.toml
homework/: homework_3.ipynb  homework_4.ipynb  homework_5.ipynb  homework_6.ipynb  homework_7.ipynb  homework_8.ipynb  homework_9.ipynb
homework/data/homework_8/online_advertising_displays/: I.csv  R.csv  p.csv  q.csv
