[tool.poetry]
name = "convex-optimisation"
version = "0.1.0"
description = ""
authors = ["ali-tny <aliteeney@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "*"
numpy = "*"
scipy = "*"
cvxpy = "^1.1.7"
matplotlib = "^3.3.3"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
